Add Function Drawpoint

--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="MyForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
